--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/compression": "^1.7.5",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
+    "@types/csurf": "^1.11.5",
     "@types/express-session": "^1.18.0",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
@@ -23,7 +27,11 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.10",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "csurf": "^1.11.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
